[package]
name = "tui_state_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2r = "0.9.0"
ratatui = "=0.23.0"
tokio = { version = "1", features = ["full"] }
crossterm = "0.23"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "publisher"
path = "src/publisher.rs"